--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       </div>
       <p class="lead">Mapping the relationships of Pokemon cries.</p>
       <p>There are a small number (38, ?) of cry "bases" in the first two generations, which are altered in pitch and speed and given to several other Pokemon. Click a Pokemon in the footer to see its cry relatives.</p>
+      <div id="graph">
+      </div>
+
     </div>
 
     <footer class="footer">
