--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
     <!-- Bootstrap Core JS -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
-
     <!-- Crydex js -->
     <script src="static/crydex.js"></script>
 
@@ -67,7 +65,7 @@
     </div>
 
     <footer class="footer">
-      <div class="container baseholder">
+      <div class="baseholder">
       </div>
     </footer>
   </body>
